[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/FireZone.png" type="Texture" id=1]
[ext_resource path="res://scripts/GhostBullet.gd" type="Script" id=2]

[node name="GhostBullet" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
